# stat-learn-project

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
minimum_submission/: README.md
minimum_submission/artifacts/models/: dummy_regressor.joblib  hist_gradient_boosting.joblib  (+3 more)
minimum_submission/configs/: default.yaml
minimum_submission/notebooks/: Subject4_Xiaopeng_Shuaibo_Marcal_Carlos_Polina_Lyes.ipynb
notebooks/: final_submission.ipynb  preliminary_main.ipynb
poly/: chap01_framework.tex  chap03_knn.tex  chap04_regression.tex  chap05_stoch_optim.tex  chap06_naive_bayes.tex  chap07_nn.tex  chap08_kmeans.tex  preamble.tex
reports/: report.tex
reports/tables/: best_model_error_by_target_range.csv  best_model_error_by_target_range.tex  dataset_overview.json  feature_summary.csv  feature_target_correlations.csv  final_model_comparison.csv  final_model_comparison.tex  final_model_residuals.csv  final_model_residuals_summary.csv  final_model_residuals_summary.tex  model_comparison.csv  preprocessing_summary.json  target_summary.json
scripts/: build_final_notebook.py  evaluate_models.py  run_eda.py  train_models.py
src/data/: __init__.py  loading.py  validation.py
src/evaluation/: __init__.py  diagnostics.py  metrics.py
src/features/: preprocessing.py
src/models/: __init__.py  registry.py
src/utils/: logging.py
src/visualization/: __init__.py  diagnostics.py  eda.py
tests/: test_config_and_paths.py  test_evaluation_metrics.py  test_model_output_tables.py  test_split_reproducibility.py
(+19 files in other folders)
