[project]
name = "stat-learn-project"
version = "0.1.0"
description = "Statistical learning project for superconductivity critical temperature prediction."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "joblib>=1.4.2",
    "jupyterlab>=4.3.0",
    "matplotlib>=3.9.0",
    "nbconvert>=7.16.4",
    "nbformat>=5.10.4",
    "numpy>=2.0.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.2",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.5.1",
    "scipy>=1.14.0",
    "seaborn>=0.13.2",
    "ucimlrepo>=0.0.7",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.6.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

